Bug 320221 - Infinite loop when pasting a youtube video
Summary: Infinite loop when pasting a youtube video
Status: RESOLVED FIXED
Alias: None
Product: telepathy
Classification: Unmaintained
Component: text-ui (other bugs)
Version First Reported In: git-latest
Platform: Other Linux
: NOR normal
Target Milestone: Future
Assignee: Daniel Vrátil
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-05-24 15:05 UTC by Alex Fiestas
Modified: 2013-05-24 15:48 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 0.7.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alex Fiestas 2013-05-24 15:05:15 UTC
When you receive or send a youtube link in an already opened chat window  the message gets painted (not sent) infinite times.

For example this video: http://www.youtube.com/watch?v=AarszOXMsAI


Reproducible: Always
Comment 1 Daniel Vrátil 2013-05-24 15:48:24 UTC
Git commit 770624e69b2ebfea5867ae1bbd6227de0597b4d0 by Dan Vrátil.
Committed on 24/05/2013 at 17:32.
Pushed by dvratil into branch 'master'.

Only listen to loadFinished() when initializing theme

Otherwise when a nested <iframe> from youtube plugin finishes
loading, we end up in an infinite loop of reloading content

Fixes regression introduced by 62bb42b610fc4d9228ed77a61dbef143658d8340
FIXED-IN: 0.7.0
Reviewed-By: David Edmundson

M  +4    -1    lib/chat-widget.cpp

http://commits.kde.org/telepathy-text-ui/770624e69b2ebfea5867ae1bbd6227de0597b4d0