Only listen to loadFinished() when initializing theme

Otherwise when a nested <iframe> from youtube plugin finishes
loading, we end up in an infinite loop of reloading content

Fixes regression introduced by 62bb42b610fc4d9228ed77a61dbef143658d8340

BUG: 320221
FIXED-IN: 0.7.0
Reviewed-By: David Edmundson